--- a/dev/index.html
+++ b/dev/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Element Plus App</title>
-    <!-- element css cdn -->
+    <title>RecycleList</title>
+    <style>
+      body {
+        margin: 0
+      }
+    </style>
   </head>
 
   <body>
