--- a/dev/index.html
+++ b/dev/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RecycleList</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+    <meta name="referrer" content="no-referrer-when-downgrade" />
+    <meta http-equiv='Referrer-Policy' content='no-referrer-when-downgrade' />
     <style>
       body {
         margin: 0
