--- a/dev/index.html
+++ b/dev/index.html
@@ -7,7 +7,8 @@
     <meta http-equiv='Referrer-Policy' content='no-referrer-when-downgrade' />
     <style>
       /* 防止微信网页下拉出现后面的网址 */
-      html,body{height:100%;overflow:hidden;}
+      html,body{overflow:hidden;height:100%;}
+
       body {
         margin: 0
       }
